# espnow_manager

./: .clang-format  AGENTS.md  API.md  CMakeLists.txt  README.md  channel_scanner.cpp  espnow_manager  espnow_manager.cpp  espnow_storage.cpp  heartbeat_manager.cpp  idf_component.yml  message_codec.cpp  message_router.cpp  pairing_manager.cpp  peer_manager.cpp  tx_manager.cpp  tx_state_machine.cpp  wifi_hal.cpp
espnow/: CMakeLists.txt  espnow.cpp
espnow/include/: espnow.hpp
host_test/: README.md  common.cmake  generate_coverage.py  test_host_automation.py
host_test/channel_scanner/: CMakeLists.txt
host_test/channel_scanner/main/: CMakeLists.txt  test_channel_scanner.cpp
host_test/common/: host_test_common.hpp
host_test/espnow_facade/: CMakeLists.txt
host_test/espnow_facade/main/: CMakeLists.txt  test_espnow_facade.cpp  test_main.cpp
host_test/espnow_manager_main/: CMakeLists.txt
host_test/espnow_manager_main/main/: CMakeLists.txt  test_espnow_manager_main.cpp
host_test/espnow_manager_singleton/: CMakeLists.txt
host_test/espnow_manager_singleton/main/: CMakeLists.txt  test_espnow_manager_singleton.cpp  test_main.cpp
host_test/espnow_storage/: CMakeLists.txt
host_test/espnow_storage/main/: CMakeLists.txt  test_espnow_storage.cpp  test_main.cpp
host_test/heartbeat_manager/: CMakeLists.txt
host_test/heartbeat_manager/main/: CMakeLists.txt  test_heartbeat_manager.cpp
host_test/message_codec/: CMakeLists.txt  test_output.txt
host_test/message_codec/main/: CMakeLists.txt  test_message_codec.cpp
host_test/message_router/: CMakeLists.txt
host_test/message_router/main/: CMakeLists.txt  test_message_router.cpp
host_test/mocks/: host_test_common.hpp  mock_channel_scanner.hpp  mock_heartbeat_manager.hpp  mock_message_codec.hpp  mock_pairing_manager.hpp  mock_storage.hpp  mock_tx_manager.hpp  mock_tx_state_machine.hpp
host_test/pairing_manager/: CMakeLists.txt
host_test/pairing_manager/main/: CMakeLists.txt  test_pairing_manager.cpp
host_test/peer_manager/: CMakeLists.txt  sdkconfig.defaults
host_test/peer_manager/main/: CMakeLists.txt  test_peer_manager.cpp
host_test/tx_manager/: CMakeLists.txt
host_test/tx_manager/main/: CMakeLists.txt  test_main.cpp  test_tx_manager.cpp
host_test/tx_state_machine/: CMakeLists.txt
host_test/tx_state_machine/main/: CMakeLists.txt  test_tx_state_machine.cpp
host_test/wifi_hal/: CMakeLists.txt
host_test/wifi_hal/main/: CMakeLists.txt  test_main.cpp  test_wifi_hal.cpp
include/: app_protocol_types.hpp  channel_scanner.hpp  espnow_interfaces.hpp  espnow_manager.hpp  espnow_manager_interface.hpp  espnow_storage.hpp  espnow_storage_backends.hpp  espnow_types.hpp  heartbeat_manager.hpp  message_codec.hpp  message_router.hpp  pairing_manager.hpp  peer_manager.hpp  protocol_messages.hpp  protocol_types.hpp  tx_manager.hpp  tx_state_machine.hpp  wifi_hal.hpp
mocks/: host_test_common.hpp  mock_channel_scanner.hpp  mock_heartbeat_manager.hpp  mock_message_codec.hpp  mock_message_router.hpp  mock_pairing_manager.hpp  mock_peer_manager.hpp  mock_storage.hpp  mock_tx_manager.hpp  mock_tx_state_machine.hpp  mock_wifi_hal.hpp
test_apps/build_test/: CMakeLists.txt
test_apps/build_test/main/: CMakeLists.txt  main.cpp
test_apps/old_tests/: CMakeLists.txt
test_apps/old_tests/main/: CMakeLists.txt  main.c  test_espnow_storage.cpp
test_apps/peer_manager/: CMakeLists.txt
test_apps/peer_manager/main/: CMakeLists.txt  test_main.cpp  test_peer_manager.cpp
